After adding maps and firebase

--- a/second.html
+++ b/second.html
@@ -147,12 +147,12 @@
 
   // Initialize Firebase
   var config = {
-    apiKey: "AIzaSyAYGdRvwcDh-MMliBt_ytc7J3kxcmm6Zpc",
-    authDomain: "rajisthanhack.firebaseapp.com",
-    databaseURL: "https://rajisthanhack.firebaseio.com",
-    projectId: "rajisthanhack",
-    storageBucket: "rajisthanhack.appspot.com",
-    messagingSenderId: "66943130589"
+     apiKey: "AIzaSyBAaitwTwEpZfS3mXdWboXh9fhPByc69gE",
+			    authDomain: "rajhack-187611.firebaseapp.com",
+			    databaseURL: "https://rajhack-187611.firebaseio.com",
+			    projectId: "rajhack-187611",
+			    storageBucket: "rajhack-187611.appspot.com",
+			    messagingSenderId: "746650132768"
   };
   firebase.initializeApp(config);
 
@@ -200,8 +200,7 @@
         });
       }
     </script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAKx86AqWuCpkxMJUP6kCYAGQ24cOa3ijs&callback=initMap"
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCyW_3PXH0FhD0yH8EoSsTS2bxke0mnD00&callback=initMap"
     async defer></script> 
-
 </body>
 </html>
