--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
   <a href="#pricing" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Stay</a>
   <a href="#contact" class="w3-bar-item w3-button w3-hide-small w3-hover-white">E-ticketing</a>
     <div class="w3-dropdown-hover w3-hide-small">
-    <button class="w3-button" title="Notifications">Plan <i class="fa fa-caret-down"></i></button>     
+    <button class="w3-button" title="Notifications">Tourism <i class="fa fa-caret-down"></i></button>     
     <div class="w3-dropdown-content w3-card-4 w3-bar-block">
       <a href="#" class="w3-bar-item w3-button">Hospitality</a>
       <a href="#" class="w3-bar-item w3-button">Packages</a>
-      <a href="second.html" class="w3-bar-item w3-button"><mark>Report</mark></a>
+      <a href="second.html" class="w3-bar-item w3-button"><mark>SAFETY-SECURITY</mark></a>
     </div>
   </div>
   <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-teal" title="Search"><i class="fa fa-search"></i></a>
