api key removal

--- a/second.html
+++ b/second.html
@@ -153,7 +153,7 @@ function myFunction() {
 
   // Initialize Firebase
   var config = {
-     apiKey: "AIzaSyBAaitwTwEpZfS3mXdWboXh9fhPByc69gE",
+     apiKey: "xxxxxxxxxxxxxxxxxxxxxxxxxxxxx",
 			    authDomain: "rajhack-187611.firebaseapp.com",
 			    databaseURL: "https://rajhack-187611.firebaseio.com",
 			    projectId: "rajhack-187611",
@@ -206,7 +206,7 @@ function myFunction() {
         });
       }
     </script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCyW_3PXH0FhD0yH8EoSsTS2bxke0mnD00&callback=initMap"
+  <script src="https://maps.googleapis.com/maps/api/js?key=xxxxxxxxx&callback=initMap"
     async defer></script> 
 </body>
 </html>
